fix(auth): sonar